Refactor the classes PublicationTemplateManager and GenericRecordSetManager as singleton in order to be conform to the manager pattern and to easly tests them and the forms they manage.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2422 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
@@ -90,3 +90,6 @@ form.EX_CANT_GET_AXIS_DETAIL = Failed to get the detail of axis #
 form.EX_CANT_GET_AXIS_VALUE = Failed to get the axis value (valueId ; treeId) :
 form.EX_CANT_GET_AXIS_VALUES = Failed to get values of axis #
 form.EX_CANT_GET_FULL_PATH = Failed to get the full path of the axis value (valueId ; treeId) :
+
+form.EX_CLONE_FAILURE = Failed to clone the form's WYSIWYG fields
+form.EX_CLONE_FAILURE = Failed to merge the form's WYSIWYG fields
