--- a/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
@@ -24,35 +24,35 @@
 # MODULE : form
 #
 
-form.EXP_UNKNOWN_TEMPLATE          = Modèle inconnu
+form.EXP_UNKNOWN_TEMPLATE          = Mod\u00e8le inconnu
 form.EXP_UNKNOWN_FORM              = Formulaire inconnu
-form.EXP_UNKNOWN_TYPE              = Type de donnée inconnu
+form.EXP_UNKNOWN_TYPE              = Type de donn\u00e9e inconnu
 form.EXP_UNKNOWN_DISPLAYER         = Type d'afficheur inconnu
 form.EXP_UNKNOWN_FIELD             = Champ inconnu
 form.EXP_INDEX_OUT_OF_BOUNDS       = Index inconnu
 
 form.INFO_NOT_CORRECT_TYPE = Le type de l'objet n'est pas correct, on attend le type : 
 form.EX_NOT_CORRECT_TYPE = Le type de l'objet n'est pas correct, on attend le type : 
-form.EX_NOT_CORRECT_VALUE  = La nouvelle valeur que l'on essaie d'attribuer à l'objet est incorrecte, type de l'objet : 
-form.EX_ERR_ILLEGAL_PARAMETERS = Paramètres incorrects
+form.EX_NOT_CORRECT_VALUE  = La nouvelle valeur que l'on essaie d'attribuer \u00e0 l'objet est incorrecte, type de l'objet : 
+form.EX_ERR_ILLEGAL_PARAMETERS = Param\u00e8tres incorrects
 
 form.EXP_MISSING_DISPLAYER_PROPERTIES  = Fichier properties absent
 form.EXP_UNKNOWN_CLASS             = Classe inconnue
-form.EXP_MISSING_EMPTY_CONSTRUCTOR = Il manque un constructeur sans paramètre
-form.EXP_NOT_A_DISPLAYER           = Classe n'implémentant pas un FieldDisplayer
-form.EXP_NOT_A_FIELD               = Classe n'implémentant pas un Field
+form.EXP_MISSING_EMPTY_CONSTRUCTOR = Il manque un constructeur sans param\u00e8tre
+form.EXP_NOT_A_DISPLAYER           = Classe n'impl\u00e9mentant pas un FieldDisplayer
+form.EXP_NOT_A_FIELD               = Classe n'impl\u00e9mentant pas un Field
 form.EXP_NOT_A_STRING		   = La valeur n'est pas de type String.
 form.EXP_NOT_AN_USER               = Impossible de prendre en compte une valeur autre qu'un utilisateur.
 form.EXP_DISPLAYER_CONSTRUCTION_FAILED= Echec de la construction d'une instance d'afficheur
 form.EXP_FIELD_CONSTRUCTION_FAILED = Echec de la construction d'une instance de champ
 form.EXP_INITIALIZATION_FAILED = Echec de l'initialisation des displayers
-form.EXP_CANT_WRITE = Impossible d'écrire le code Html
+form.EXP_CANT_WRITE = Impossible d'\u00e9crire le code Html
 
-form.EXP_SELECT_FAILED = Echec de la sélection en base de données.
-form.EXP_INSERT_FAILED = Echec de l'insertion en base de données.
-form.EXP_UPDATE_FAILED = Echec de la mise à jour en base de données.
-form.EXP_DELETE_FAILED = Echec de la suppression en base de données.
-form.EXP_CLOSE_FAILED = Erreur lors de la fermeture de la connexion à la base de données.
+form.EXP_SELECT_FAILED = Echec de la s\u00e9lection en base de donn\u00e9es.
+form.EXP_INSERT_FAILED = Echec de l'insertion en base de donn\u00e9es.
+form.EXP_UPDATE_FAILED = Echec de la mise \u00e0 jour en base de donn\u00e9es.
+form.EXP_DELETE_FAILED = Echec de la suppression en base de donn\u00e9es.
+form.EXP_CLOSE_FAILED = Erreur lors de la fermeture de la connexion \u00e0 la base de donn\u00e9es.
 
 form.EX_CANT_PARSE_DATE = Impossible de lire le champ de type Date
 form.EX_CANT_CLOSE_FILE = Impossible de fermer le fichier
@@ -62,31 +62,34 @@ form.EX_CANT_READ_FILE = Impossible de lire le fichier
 form.EX_ERR_CASTOR_LOAD_XML_MAPPING = Echec de Castor lors du chargement du fichier XML.
 form.EX_ERR_CASTOR_UNMARSHALL_PUBLICATION_TEMPLATE = Echec de Castor lors du tri du fichier XML.
 form.EX_ERR_CASTOR_INVALID_XML_PUBLICATION_TEMPLATE = Echec de Castor lors du parsing du fichier XML.
-form.EX_ERR_CASTOR_LOAD_PUBLICATION_TEMPLATE = Echec Castor lors du chargement du modèle de publication à partir du fichier XML.
-form.EX_ERR_CASTOR_SAVE_PUBLICATION_TEMPLATE = Echec Castor lors de l'enregistrement du modèle de publication à partir du fichier XML.
+form.EX_ERR_CASTOR_LOAD_PUBLICATION_TEMPLATE = Echec Castor lors du chargement du mod\u00e8le de publication \u00e0 partir du fichier XML.
+form.EX_ERR_CASTOR_SAVE_PUBLICATION_TEMPLATE = Echec Castor lors de l'enregistrement du mod\u00e8le de publication \u00e0 partir du fichier XML.
 
 form.EX_CANT_GET_RECORDSET = Impossible d'obtenir le Recordset
-form.EX_CANT_GET_FORM = Impossible de créer le formulaire
+form.EX_CANT_GET_FORM = Impossible de cr\u00e9er le formulaire
 
-form.EX_CANT_PARSE_DATE = Impossible de transformer la chaîne en Date
+form.EX_CANT_PARSE_DATE = Impossible de transformer la cha\u00eene en Date
 
-form.EX_CANT_CONNECT_LDAP = Impossible de se connecter à LDAP
-form.EX_CANT_BIND_LDAP = Impossible de se binder à LDAP
-form.EX_CANT_SEARCH_LDAP = La recherche dans LDAP a échoué 
+form.EX_CANT_CONNECT_LDAP = Impossible de se connecter \u00e0 LDAP
+form.EX_CANT_BIND_LDAP = Impossible de se binder \u00e0 LDAP
+form.EX_CANT_SEARCH_LDAP = La recherche dans LDAP a \u00e9chou\u00e9 
 form.EX_CANT_SET_CONSTRAINT_LDAP = Impossible d'attribuer les contraintes LDAP
 
-form.EX_CANT_CREATE_NODEBM_HOME = Impossible de créer le service PublicationBmHome
-form.EX_CANT_GET_PATH_NODE = Impossible d'obtenir le chemin du thème
+form.EX_CANT_CREATE_NODEBM_HOME = Impossible de cr\u00e9er le service PublicationBmHome
+form.EX_CANT_GET_PATH_NODE = Impossible d'obtenir le chemin du th\u00e8me
 
 form.EX_CANT_FIND_DRIVER_JDBC = Impossible de trouver le Driver JDBC
-form.EX_CANT_CONNECT_JDBC = Impossible de se connecter à la base de données
-form.EX_CANT_PREPARE_STATEMENT_JDBC = Impossible d'effectuer le preparedStatement de la requête
-form.EX_CANT_EXECUTE_QUERY_JDBC = Impossible d'exécuter la requête
-form.EX_CANT_BROWSE_RESULT_JDBC = Impossible de parcourir les résultats de la requête
+form.EX_CANT_CONNECT_JDBC = Impossible de se connecter \u00e0 la base de donn\u00e9es
+form.EX_CANT_PREPARE_STATEMENT_JDBC = Impossible d'effectuer le preparedStatement de la requ\u00eate
+form.EX_CANT_EXECUTE_QUERY_JDBC = Impossible d'ex\u00e9cuter la requ\u00eate
+form.EX_CANT_BROWSE_RESULT_JDBC = Impossible de parcourir les r\u00e9sultats de la requ\u00eate
 
-form.EXP_UPDATE             = Impossible de mettre à jour le champ
+form.EXP_UPDATE             = Impossible de mettre \u00e0 jour le champ
 
-form.EX_CANT_GET_AXIS_DETAIL = Impossible de récupérer le detail de l'axe #
-form.EX_CANT_GET_AXIS_VALUE = Impossible de récupérer la valeur de l'axe (valueId ; treeId) :
-form.EX_CANT_GET_AXIS_VALUES = Impossible de récupérer les valeurs de l'axe #
-form.EX_CANT_GET_FULL_PATH = Impossible de récupérer le chemin complet de la valeur de l'axe (valueId ; treeId) :
+form.EX_CANT_GET_AXIS_DETAIL = Impossible de r\u00e9cup\u00e9rer le detail de l'axe #
+form.EX_CANT_GET_AXIS_VALUE = Impossible de r\u00e9cup\u00e9rer la valeur de l'axe (valueId ; treeId) :
+form.EX_CANT_GET_AXIS_VALUES = Impossible de r\u00e9cup\u00e9rer les valeurs de l'axe #
+form.EX_CANT_GET_FULL_PATH = Impossible de r\u00e9cup\u00e9rer le chemin complet de la valeur de l'axe (valueId ; treeId) :
+
+form.EX_CLONE_FAILURE = Impossible de cloner les champs WYSIWYG
+form.EX_MERGE_FAILURE = Impossible de fusionner les champs WYSIWYG
