Add of a new field type in XML forms: a video one. Add of support of the flowplayer Flash player to play videos; the video has to be encoded in FLV. Replaces some explicits references of Hashtable by Map and Vector by List. The adding of the video field is not complete. Some stuffs are staying along such as the configuration of the video playing and probably some code refactoring (once some given things about file-type fields in XML forms will be more understood).
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2450 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -36,8 +36,8 @@ templateDesigner.file = Datei
 templateDesigner.fields = Formular-Felder
 templateDesigner.field = Formular-Feld
 
-templateDesigner.size = Gr\u00F6sse des Feldes
-templateDesigner.maxLength = Maximale Gr\u00F6sse des Textes
+templateDesigner.size = Gr\u00f6sse des Feldes
+templateDesigner.maxLength = Maximale Gr\u00f6sse des Textes
 templateDesigner.rows = Anzahl Zeilen
 templateDesigner.cols = Anzahl Spalten
 templateDesigner.default = Standardwert
@@ -49,38 +49,39 @@ templateDesigner.password = LDAP Passwort-Authentifizierung
 templateDesigner.searchBase = LDAP Anfrage
 templateDesigner.searchScope = Tiefe der LDAP Anfrage
 templateDesigner.searchFilter = Suchfilter
-templateDesigner.searchAttribute = Name des zur\u00FCckgegeben Attributs
-templateDesigner.searchTypeOnly = Gibt nur die Namen der Attribute zur\u00FCck (true / false)
-templateDesigner.maxResultDisplayed  = Maximale Anzahl von zur\u00FCckgegebenen Suchergebnisse
-templateDesigner.valueFieldType = Beschr\u00E4nktes Feld (1) oder freie Suche (2)
+templateDesigner.searchAttribute = Name des zur\u00fcckgegeben Attributs
+templateDesigner.searchTypeOnly = Gibt nur die Namen der Attribute zur\u00fcck (true / false)
+templateDesigner.maxResultDisplayed  = Maximale Anzahl von zur\u00fcckgegebenen Suchergebnisse
+templateDesigner.valueFieldType = Beschr\u00e4nktes Feld (1) oder freie Suche (2)
 templateDesigner.driverName = Name der JDBC-Treiberklasse
 templateDesigner.url = Verbindungs URL
-templateDesigner.login = Login f\u00FCr die Verbindung zur Datenbank
-templateDesigner.passwordDB = Passwort f\u00FCr die Verbindung zur Datenbank
+templateDesigner.login = Login f\u00fcr die Verbindung zur Datenbank
+templateDesigner.passwordDB = Passwort f\u00fcr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
 
-templateDesigner.addOption = Diese Option hinzuf\u00FCgen
-templateDesigner.updateOption = Diese Option \u00E4ndern
-templateDesigner.deleteOption = Diese Option l\u00F6schen
+templateDesigner.addOption = Diese Option hinzuf\u00fcgen
+templateDesigner.updateOption = Diese Option \u00e4ndern
+templateDesigner.deleteOption = Diese Option l\u00f6schen
 templateDesigner.defaultOption = Diese Option als Standardwert festlegen
 templateDesigner.optionText = Text
-templateDesigner.optionValue = Schl\u00FCssel
+templateDesigner.optionValue = Schl\u00fcssel
 
-templateDesigner.newFieldText = Ein 'Text'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldTextarea = Ein 'Mehrzeilentext'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldWysiwyg = Ein 'WYSIWYG'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldList = Ein 'Scroll-Listen'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldCheckbox = Ein 'Kontrollk\u00E4stchen' hinzuf\u00FCgen
-templateDesigner.newFieldRadio = Eine 'Optionsschaltfl\u00E4che' hinzuf\u00FCgen
-templateDesigner.newFieldURL = Ein 'URL'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldDate = Ein 'Datum'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldFile = Ein 'Datei'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldImage = Ein 'Bild'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldUser = Ein 'Benutzer'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldUser = Ein 'Group'-Feld hinzuf\u00FCgen
-templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzuf\u00FCgen
-templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzuf\u00FCgen
-templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzuf\u00FCgen
+templateDesigner.newFieldText = Ein 'Text'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldTextarea = Ein 'Mehrzeilentext'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldWysiwyg = Ein 'WYSIWYG'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldList = Ein 'Scroll-Listen'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldCheckbox = Ein 'Kontrollk\u00e4stchen' hinzuf\u00fcgen
+templateDesigner.newFieldRadio = Eine 'Optionsschaltfl\u00e4che' hinzuf\u00fcgen
+templateDesigner.newFieldURL = Ein 'URL'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldDate = Ein 'Datum'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldFile = Ein 'Datei'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldImage = Ein 'Bild'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldVideo = Ein 'Video'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldUser = Ein 'Benutzer'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldUser = Ein 'Group'-Feld hinzuf\u00fcgen
+templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzuf\u00fcgen
+templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzuf\u00fcgen
+templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzuf\u00fcgen
 
 templateDesigner.displayer = Anzeiger
 templateDesigner.operations = Operationen
@@ -88,7 +89,7 @@ templateDesigner.up = 	Nach oben
 templateDesigner.down = Nach unten
 
 templateDesigner.operations = Operationen
-templateDesigner.available = Verf\u00FCgbar
+templateDesigner.available = Verf\u00fcgbar
 
 templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
