--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -77,6 +77,7 @@ templateDesigner.newFieldURL = Add an 'URL' field
 templateDesigner.newFieldDate = Add a 'Date' field
 templateDesigner.newFieldFile = Add a 'File' field
 templateDesigner.newFieldImage = Add an 'Image' field
+templateDesigner.newFieldVideo = Add a 'Video' field
 templateDesigner.newFieldUser = Add a 'User' field
 templateDesigner.newFieldGroup = Add a 'Group' field
 templateDesigner.newFieldLdap = Add a 'LDAP connector' field
