--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -23,11 +23,11 @@
 #
 templateDesigner.toolName = Designer de formulaires
 templateDesigner.template = Formulaire
-templateDesigner.visibility = Visibilité
+templateDesigner.visibility = Visibilit\u00e9
 templateDesigner.visible = Visible
-templateDesigner.hidden = Masqué
+templateDesigner.hidden = Masqu\u00e9
 templateDesigner.templateList = Liste des formulaires
-templateDesigner.newTemplate = Créer un nouveau formulaire
+templateDesigner.newTemplate = Cr\u00e9er un nouveau formulaire
 templateDesigner.image = Vignette
 templateDesigner.searchable = Recherche
 templateDesigner.file = Fichier
@@ -39,43 +39,44 @@ templateDesigner.size = Taille du champ
 templateDesigner.maxLength = Taille maximum du texte
 templateDesigner.rows = Nombre de lignes
 templateDesigner.cols = Nombre de colonnes
-templateDesigner.default = Valeur par défaut
-templateDesigner.host = Nom du serveur hôte LDAP
-templateDesigner.port = Numéro de port
-templateDesigner.version = Numéro de version du protocole LDAP
-templateDesigner.baseDN = Chaîne de connexion LDAP
+templateDesigner.default = Valeur par d\u00e9faut
+templateDesigner.host = Nom du serveur h\u00f4te LDAP
+templateDesigner.port = Num\u00e9ro de port
+templateDesigner.version = Num\u00e9ro de version du protocole LDAP
+templateDesigner.baseDN = Cha\u00eene de connexion LDAP
 templateDesigner.password = Mot de passe d'autehntification LDAP
-templateDesigner.searchBase = Requête LDAP de recherche
+templateDesigner.searchBase = Requ\u00eate LDAP de recherche
 templateDesigner.searchScope = Niveau de profondeur de recherche
 templateDesigner.searchFilter = Filtre de recherche
-templateDesigner.searchAttribute = Nom de l'attribut à renvoyer
+templateDesigner.searchAttribute = Nom de l'attribut \u00e0 renvoyer
 templateDesigner.searchTypeOnly = Retourne seulement les noms des attributs (true/false)
-templateDesigner.maxResultDisplayed  = Nombre maximum de résultats de recherche retournés
+templateDesigner.maxResultDisplayed  = Nombre maximum de r\u00e9sultats de recherche retourn\u00e9s
 templateDesigner.valueFieldType = Champ restreint (1) ou saisie libre (2)
 templateDesigner.driverName = Nom de la classe du driver JDBC
 templateDesigner.url = URL de connexion
-templateDesigner.login = Login de connexion à la base
-templateDesigner.passwordDB = Mot de passe de connexion à la base
-templateDesigner.query = Requête SQL de recherche
+templateDesigner.login = Login de connexion \u00e0 la base
+templateDesigner.passwordDB = Mot de passe de connexion \u00e0 la base
+templateDesigner.query = Requ\u00eate SQL de recherche
 templateDesigner.suggestions = Suggestions
 
 templateDesigner.addOption = Ajouter cette option
 templateDesigner.updateOption = Modifier cette option
 templateDesigner.deleteOption = Supprime cette option
-templateDesigner.defaultOption = Définir cette option comme valeur par défaut
+templateDesigner.defaultOption = D\u00e9finir cette option comme valeur par d\u00e9faut
 templateDesigner.optionText = Texte
-templateDesigner.optionValue = Clé
+templateDesigner.optionValue = Cl\u00e9
 
 templateDesigner.newFieldText = Ajouter un champ 'Texte'
 templateDesigner.newFieldTextarea = Ajouter un champ 'Texte multiligne'
 templateDesigner.newFieldWysiwyg = Ajouter un champ 'Wysiwyg'
-templateDesigner.newFieldList = Ajouter un champ 'Liste déroulante'
-templateDesigner.newFieldCheckbox = Ajouter un champ 'Case à cocher'
+templateDesigner.newFieldList = Ajouter un champ 'Liste d\u00e9roulante'
+templateDesigner.newFieldCheckbox = Ajouter un champ 'Case \u00e0 cocher'
 templateDesigner.newFieldRadio = Ajouter un champ 'Bouton radio'
 templateDesigner.newFieldURL = Ajouter un champ 'URL'
 templateDesigner.newFieldDate = Ajouter un champ 'Date'
 templateDesigner.newFieldFile = Ajouter un champ 'Fichier'
 templateDesigner.newFieldImage = Ajouter un champ 'Image'
+templateDesigner.newFieldVideo = Ajouter un champ 'Vid\u00e9o'
 templateDesigner.newFieldUser = Ajouter un champ 'Utilisateur'
 templateDesigner.newFieldGroup = Ajouter un champ 'Groupe'
 templateDesigner.newFieldLdap = Ajouter un champ 'Connecteur LDAP'
@@ -84,13 +85,13 @@ templateDesigner.newFieldJdbc = Ajouter un champ 'Connecteur JDBC'
 templateDesigner.newFieldPdc = Ajouter un champ 'PDC'
 
 templateDesigner.displayer = Afficheur
-templateDesigner.operations = Opérations
+templateDesigner.operations = Op\u00e9rations
 templateDesigner.up = Monter
 templateDesigner.down = Descendre
 
 templateDesigner.displayer.image.maxWidth = Largeur max
 templateDesigner.displayer.image.maxHeight = Hauteur max
-templateDesigner.displayer.image.galleries = Phototh\u00E8ques
+templateDesigner.displayer.image.galleries = Phototh\u00e8ques
 
 templateDesigner.displayer.wysiwyg.width = Largeur
 templateDesigner.displayer.wysiwyg.height = Hauteur
