Ends the implementation of a video field in XML forms. The following video properties are provided to the user: autoplay, video width and video height.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2462 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -95,5 +95,9 @@ templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
 templateDesigner.displayer.image.galleries = Galleries
 
+templateDesigner.displayer.video.width = Breite
+templateDesigner.displayer.video.height = H\u00f6he
+templateDesigner.displayer.video.autoplay = Autoplay
+
 templateDesigner.displayer.wysiwyg.width = Weite
 templateDesigner.displayer.wysiwyg.height = Hohe
