--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -94,5 +94,9 @@ templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
 templateDesigner.displayer.image.galleries = Galleries
 
+templateDesigner.displayer.video.width = Width
+templateDesigner.displayer.video.height = Height
+templateDesigner.displayer.video.autoplay = Autoplay
+
 templateDesigner.displayer.wysiwyg.width = Width
 templateDesigner.displayer.wysiwyg.height = Height
