--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -93,5 +93,9 @@ templateDesigner.displayer.image.maxWidth = Largeur max
 templateDesigner.displayer.image.maxHeight = Hauteur max
 templateDesigner.displayer.image.galleries = Phototh\u00e8ques
 
+templateDesigner.displayer.video.width = Largeur
+templateDesigner.displayer.video.height = Hauteur
+templateDesigner.displayer.video.autoplay = Lecture automatique
+
 templateDesigner.displayer.wysiwyg.width = Largeur
 templateDesigner.displayer.wysiwyg.height = Hauteur
