--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -82,6 +82,7 @@ templateDesigner.newFieldUser = Ein 'Group'-Feld hinzuf\u00fcgen
 templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzuf\u00fcgen
 templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzuf\u00fcgen
 templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzuf\u00fcgen
+templateDesigner.newFieldSequence = Ein Feld 'Sequenz' hinzuf\u00FCgen
 
 templateDesigner.displayer = Anzeiger
 templateDesigner.operations = Operationen
@@ -100,4 +101,10 @@ templateDesigner.displayer.video.height = H\u00f6he
 templateDesigner.displayer.video.autoplay = Autoplay
 
 templateDesigner.displayer.wysiwyg.width = Weite
-templateDesigner.displayer.wysiwyg.height = Hohe
+templateDesigner.displayer.wysiwyg.height = H\u00f6he
+
+templateDesigner.displayer.sequence.minLength = Min L\u00E4nge
+templateDesigner.displayer.sequence.startValue = Abfahrtwert
+templateDesigner.displayer.sequence.valueCreation = Wert Sch\u00f6pfung
+templateDesigner.displayer.sequence.reuseAvailableValues = Erh\u00E4ltlige Werte verwenden
+templateDesigner.displayer.sequence.alwaysIncrement = Immer erh\u00f6en
