--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -84,6 +84,7 @@ templateDesigner.newFieldLdap = Add a 'LDAP connector' field
 templateDesigner.newFieldAccessPath = Add an 'Access path' field
 templateDesigner.newFieldJdbc = Add a 'JDBC connector' field
 templateDesigner.newFieldPdc = Add a 'PDC' field
+templateDesigner.newFieldSequence = Add a 'Sequence' field
 
 templateDesigner.displayer = Displayer
 templateDesigner.operations = Operations
@@ -100,3 +101,9 @@ templateDesigner.displayer.video.autoplay = Autoplay
 
 templateDesigner.displayer.wysiwyg.width = Width
 templateDesigner.displayer.wysiwyg.height = Height
+
+templateDesigner.displayer.sequence.minLength = Min length
+templateDesigner.displayer.sequence.startValue = Start value
+templateDesigner.displayer.sequence.valueCreation = Value creation
+templateDesigner.displayer.sequence.reuseAvailableValues = Reuse available values
+templateDesigner.displayer.sequence.alwaysIncrement = Always increment
