--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -83,6 +83,7 @@ templateDesigner.newFieldLdap = Ajouter un champ 'Connecteur LDAP'
 templateDesigner.newFieldAccessPath = Ajouter un champ 'Emplacement'
 templateDesigner.newFieldJdbc = Ajouter un champ 'Connecteur JDBC'
 templateDesigner.newFieldPdc = Ajouter un champ 'PDC'
+templateDesigner.newFieldSequence = Ajouter un champ 'S\u00e9quence'
 
 templateDesigner.displayer = Afficheur
 templateDesigner.operations = Op\u00e9rations
@@ -99,3 +100,9 @@ templateDesigner.displayer.video.autoplay = Lecture automatique
 
 templateDesigner.displayer.wysiwyg.width = Largeur
 templateDesigner.displayer.wysiwyg.height = Hauteur
+
+templateDesigner.displayer.sequence.minLength = Longueur min
+templateDesigner.displayer.sequence.startValue = Valeur de d\u00e9part
+templateDesigner.displayer.sequence.valueCreation = Cr\u00e9ation de valeur
+templateDesigner.displayer.sequence.reuseAvailableValues = R\u00e9utiliser les valeurs disponibles
+templateDesigner.displayer.sequence.alwaysIncrement = Toujours incr\u00e9menter
