closing feature #1196. Adding new entry in the backoffice : Outils > A propos...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2606 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
@@ -41,6 +41,7 @@ JMAP = Maintenance
 JST = Console SilverTrace
 JTD = Formulaires
 portlets = Portlets
+JAB = A propos...
 
 JKM1 = Axes
 JKM2 = Synonymes
