--- a/config-core/src/main/config/silvertrace/messages/publicationMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/publicationMessages_en.properties
@@ -44,6 +44,7 @@ publication.GETTING_PUBLICATION_FAILED =
 publication.GETTING_NUMBER_OF_PUBLICATIONS_FAILED = 
 publication.GETTING_PUBLICATIONS_PK_FAILED =  
 publication.PUBLICATION_UNFINDABLE = 
+publication.GET_THUMBNAIL_ERROR =
 
 
 # NEW NEW NEW
