--- a/config-core/src/main/config/silvertrace/messages/publicationMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/publicationMessages_fr.properties
@@ -44,6 +44,7 @@ publication.GETTING_PUBLICATION_FAILED = Impossible d'obtenir la publication
 publication.GETTING_NUMBER_OF_PUBLICATIONS_FAILED = Impossible d'obtenir le nombre de publications
 publication.GETTING_PUBLICATIONS_PK_FAILED =  Impossible d'obtenir les PKs des publications
 publication.PUBLICATION_UNFINDABLE = Impossible de trouver la publication ! Verifiez qu'elle existe toujours
+publication.GET_THUMBNAIL_ERROR = Impossible d'obtenir les informations de la vignette
 
 
 # NEW NEW NEW
