Related to feature #1186, improving look and feel.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2702 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/thumbnail/multilang/thumbnailBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thumbnail/multilang/thumbnailBundle_en.properties
@@ -22,8 +22,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 thumbnail.componentName = thumbnail
-thumbnail.title = Your picture
 
 thumbnail.path = Path
-thumbnail.picture = Your picture
+thumbnail.picture = Select the area to define your thumbnail
+thumbnail.preview = Thumbnail preview
 thumbnail.nofile = Please fill the file path
