--- a/config-core/src/main/config/properties/com/silverpeas/thumbnail/multilang/thumbnailBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thumbnail/multilang/thumbnailBundle_fr.properties
@@ -24,7 +24,8 @@
 thumbnail.componentName = thumbnail
 
 thumbnail.path = Chemin
-thumbnail.picture = Votre image
+thumbnail.picture = Sélectionnez la zone à afficher en vignette :
+thumbnail.preview = Visualisation de la vignette
 thumbnail.nofile = Merci de sélectionner un fichier
 
 thumbnail.EX_MSG_NOT_AN_IMAGE = Erreur d'enregistrement du fichier car ce n'est pas une image.
