Closed Feature #1294 - Add component ScheduleEvent (unactif by default)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2752 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
@@ -50,6 +50,9 @@ NotificationBox = Meine Benachrichtigungen lesen
 MyInterestCenters = Meine Abonnemente
 LatestPublications = Die * letzten Ver\u00F6ffentlichungen
 QuickInfos = QuickInfos
+FileSharing = Meine tickets
+WebConnections = Meine connections
+ScheduleEvent = Finden Sie eine Datum
 
 HelpLaunchIE = Hilfe zum Starten der Tools
 HelpLaunchIEPage = HelpLaunchIE_fr.jsp
