--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
@@ -51,6 +51,7 @@ LatestPublications = The * latest publications
 QuickInfos = Quick info
 FileSharing = My tickets
 WebConnections = My connections
+ScheduleEvent = Schedule an event
 
 HelpLaunchIE = Help on tools implementation
 HelpLaunchIEPage = HelpLaunchIE.jsp
