--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
@@ -51,6 +51,7 @@ LatestPublications = Les * derni\u00E8res publications
 QuickInfos = Quick infos
 FileSharing = Mes tickets
 WebConnections = Mes connexions
+ScheduleEvent = Trouver une date
 
 HelpLaunchIE = Aide au lancement des outils
 HelpLaunchIEPage = HelpLaunchIE_fr.jsp
