--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
@@ -39,6 +39,7 @@ lookSilverpeasV5.glossaire = Glossary
 lookSilverpeasV5.reductExtend = Collapse/Expand
 lookSilverpeasV5.backOffice = Back Office
 lookSilverpeasV5.home = Home
+lookSilverpeasV5.directory = Directory
 
 # Connected Users
 lookSilverpeasV5.connectedUser = connected user
